demoproject_2/src/objects/Trainee__c.object
<CustomObject>
    <fields>
        <fullName>Designation__c</fullName>
        <inlineHelpText>Enter the designation of the trainee</inlineHelpText>
        <label>Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ID__c</fullName>
        <inlineHelpText>Enter the email id of the trainee</inlineHelpText>
        <label>Email ID</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmpID__c</fullName>
        <inlineHelpText>Enter the Employee ID for the trainee</inlineHelpText>
        <label>EmpID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Overall_Score__c</fullName>
        <label>Max Overall Score</label>
        <summarizedField>Score__c.Maximum_Score__c</summarizedField>
        <summaryForeignKey>Score__c.Trainee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mentor_Name__c</fullName>
        <inlineHelpText>Enter the name of the mentor who has been assigned for the trainee.</inlineHelpText>
        <label>Mentor Name</label>
        <picklist>
            <picklistValues>
                <fullName>Akanksha Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omair Akram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deepak Vinod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <inlineHelpText>This is a read only field which gets automatically populated as the trainee takes the daily tests.</inlineHelpText>
        <label>Overall Score</label>
        <summarizedField>Score__c.Marks_Scored__c</summarizedField>
        <summaryForeignKey>Score__c.Trainee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <inlineHelpText>Enter the service line of the trainee.</inlineHelpText>
        <label>Service_Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Trainee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Line__c</columns>
        <columns>Designation__c</columns>
        <columns>Mentor_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trainee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>